--- a/001-roman-numerals-converter/cfn-roman-numbers.yaml
+++ b/001-roman-numerals-converter/cfn-roman-numbers.yaml
@@ -31,14 +31,14 @@ Resources:
       GroupDescription: Enable SSH & HTTP and port 8080
       GroupName: ogulcan-roman-numerals-converter
       SecurityGroupIngress:
-        - IpProtocol: tcp
+        - CidrIp: 0.0.0.0/0
           FromPort: 22
+          IpProtocol: tcp
           ToPort: 22
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
+        - CidrIp: 0.0.0.0/0
           FromPort: 80
+          IpProtocol: tcp
           ToPort: 80
-          CidrIp: 0.0.0.0/0
 
   MyWebServer:
     Type: AWS::EC2::Instance
@@ -69,5 +69,5 @@ Outputs:
   WebsiteURL:
     Description: Roman Numerals Converter Application URL
     Value: !Sub
-      - http://${URLName}
-      - URLName: !GetAtt MyWebServer.PublicDnsName
+      - http://${MyURLName}
+      - MyURLName: !GetAtt MyWebServer.PublicDnsName
